Add Milestone 5 content and placeholders for milestone 6

--- a/vitepage/src/components/styles/PDFView.css
+++ b/vitepage/src/components/styles/PDFView.css
@@ -25,6 +25,10 @@
     aspect-ratio: 8.5 / 11;
 }
 
+.pdf-viewer-poster {
+    aspect-ratio: 11 / 8.5;
+}
+
 .pdf-viewer-doc h5 {
     line-height: 130%;
     color: #01000a;
